--- a/remid-help.html
+++ b/remid-help.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>remid复制相关帮助</title>
     <style type="text/css">
         .bd1{
             /*高斯模糊*/
