--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         left: 87.5%;
         border-radius: 20px;
         font-weight: 1000;
-        font-family: "SDC_SC_Web";
+        font-family: "SDK_SC_Web";
       }
 
       /* 信息输入区域与（此处插入模块3）背景 */
