--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This HTML page programed by Jerry; About this project's Github page: https://github.com/Jerry114514/bf1-web-tool-HTML-Template -->
+<!-- This HTML page programed by Jerry114514@github; About this project's Github page: https://github.com/Jerry114514/bf1-web-tool-HTML-Template -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
