--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       span {
         transition: background-color, 1s;
       }
-
-      .info,.info2{
-        border-radius: 20px
+      a {
+        transition: color, 1s;
+      }
+      .info,
+      .info2 {
+        border-radius: 20px;
       }
       /* 标题 */
       .bigti {
@@ -41,7 +44,7 @@
         z-index: 9;
       }
 
-      #circFunction{
+      #circFunction {
         display: flex;
         position: absolute;
         top: 95.8%;
@@ -269,8 +272,10 @@
       let msg1 = document.querySelectorAll(".info");
       let msg2 = document.querySelectorAll(".info2");
       let i = 1;
+      /* 通过i是否能被2整除判定点击次数以调整主题 */
       dayNight.addEventListener("click", function () {
         if (i % 2 == 0) {
+          /* 切换至暗色主题 */
           for (let j = 0; j < msg1.length; j++) {
             msg1[j].style.backgroundColor = "rgba(255, 255, 255, 0.6)";
           }
@@ -278,21 +283,23 @@
             msg2[j].style.backgroundColor = "rgba(255, 255, 255, 0.6)";
           }
           /* 已经...变成jq的形状了... */
-          $("h2").css({
+          $("h2").css({                                                                     
             color: "black",
           });
-          
+
           $("h3").css({
             color: "black",
-          })
+          });
           $("span").css({
             color: "black",
-          })
-
+          });
+          $("a").css({
+            color: "blue",
+          });
         } else {
+          /* 切换回明色主题 */
           for (let j = 0; j < msg1.length; j++) {
             msg1[j].style.backgroundColor = "rgba(0, 0, 0, 0.6)";
-           
           }
           for (let j = 0; j < msg2.length; j++) {
             msg2[j].style.backgroundColor = "rgba(0, 0, 0, 0.6)";
@@ -302,13 +309,18 @@
           });
           $("h3").css({
             color: "white",
-          })
+          });
           $("span").css({
             color: "white",
-          })
+          });
+          $("a").css({
+            color: "#58ff00",
+          });
         }
         i++;
+        console.log(i)
       });
     </script>
   </body>
 </html>
+
